# Classification-and-Regression-of-ECG-EEG-and-Time-Series-Signals

./: README.md  main.py  pyproject.toml
experiments/: AbnormalHeartbeat_01.py  AppliancesEnergy_01.py  LiveFuelMoistureContent_01.py  SelfRegulationSCP2_01.py
models/: abnormal_heartbeat_cnn.pt  abnormal_heartbeat_gru.pt  abnormal_heartbeat_lstm.pt  abnormal_heartbeat_rnn.pt  appliances_energy_cnn.pt  appliances_energy_gru.pt  appliances_energy_lstm.pt  appliances_energy_rnn.pt  live_fuel_moisture_cnn.pt  live_fuel_moisture_gru.pt  live_fuel_moisture_lstm.pt  live_fuel_moisture_rnn.pt  self_regulation_scp2_cnn.pt  self_regulation_scp2_gru.pt  self_regulation_scp2_rnn.pt
utils/: config.py  data_loader.py  model_factory.py  preprocessor.py  trainer.py
