[project]
name = "ecg-eeg-signal-classification-and-regression-with-cnn-rnn-lstm-gru"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "scikit-learn>=1.8.0",
    "wandb>=0.19.0",
]
